# robot-binder

./: CHANGELOG.md  Makefile  README.md
binder/: .aderc  .gitconfig  Dockerfile.base  Dockerfile.dev  Dockerfile.prod  Makefile.env  README.md  docker-compose.robot.yml  postBuild
binder/ade/: entrypoint  env.sh
binder/ais-makefile/: Makefile  README.md
binder/base/: apt.base.pkg  py-requirements.txt
binder/dev/: Makefile  apt.dev.pkg  bashrc  workspace.sh
binder/jenkins/: Jenkinsfile  Jenkinsfile-latest
binder/phoenix1-fleet-management/: condor.env
binder/prod/: entrypoint
binder/scripts/: run_sim_test.sh  run_simulation.sh  wait_for_complete.bash
binder/testing/: .env  phoenix_tests.bash
binder/underlay_ws/: README.md
binder/underlay_ws/src/ais-bigtop-rosbags/: CMakeLists.txt  README.md  package.xml
binder/underlay_ws/src/ais-bigtop-rosbags/config/: params.yaml  perception_topics.config  topics.config
binder/underlay_ws/src/ais-bigtop-rosbags/launch/: bigtop_record.launch  example_record.launch  perception_record.launch
binder/underlay_ws/src/ais-bigtop-rosbags/script/: monitor.py  monitor_node_threads.py  monitor_rail_head_detection.py  shutdown.py
binder/underlay_ws/src/ais-bigtop-rosbags/src/: prog_record_node.cpp
codepipeline/: buildspec-base-tag.yml  buildspec-base.yml  buildspec-dev-tag.yml  buildspec-dev.yml  buildspec-prod-tag.yml  buildspec-prod.yml  buildspec-tests.yml
robot_ws/src/ais_cru_manager/: CMakeLists.txt  package.xml
robot_ws/src/ais_cru_manager/include/ais_cru_manager/: GetHostnameTestSuite.h  RobotCRUManager.h
robot_ws/src/ais_cru_manager/launch/: cru_hostname.launch
robot_ws/src/ais_cru_manager/src/: RobotCRUManager.cpp  cru_hostname_node.cpp
robot_ws/src/ais_cru_manager/tests/: get_hostname.test
robot_ws/src/ais_cru_manager/tests/src/: GetHostnameTestSuite.cpp  get_hostname_test.cpp
robot_ws/src/ais_dimming_module/: CMakeLists.txt  README.md  TODO.md  package.xml
robot_ws/src/ais_dimming_module/launch/: ais_dimming_module.launch
robot_ws/src/ais_dimming_module/src/: AbstractDimModuleController.cpp  DimModuleController.cpp  dimming_module_node.cpp
robot_ws/src/ais_dimming_module/tests/: dimming_node.test
robot_ws/src/ais_job_manager/: CMakeLists.txt  README.md  package.xml
robot_ws/src/ais_job_manager/launch/: ais_job_manager.launch
robot_ws/src/ais_job_manager/scripts/: createRailMission.bash
robot_ws/src/ais_job_manager/src/: AbstractJobManager.cpp  JobManager.cpp  job_manager_node.cpp
robot_ws/src/ais_led_strip_controller/: CMakeLists.txt  package.xml
robot_ws/src/ais_led_strip_controller/launch/: debug.launch  led_strip_controller.launch
robot_ws/src/ais_messages/: README.md
robot_ws/src/ais_messages/phoenix_msgs/: CMakeLists.txt  package.xml
robot_ws/src/ais_messages/phoenix_msgs/action/: SendRailGoal.action
robot_ws/src/ais_messages/phoenix_msgs/include/phoenix_msgs/: RailGoal.h
robot_ws/src/ais_messages/phoenix_msgs/msg/: DimmingIrradianceData.msg  RailGoalPoint.msg  RailMission.msg
robot_ws/src/ais_messages/phoenix_msgs/srv/: CreateRailMission.srv  LedPattern.srv  ListOfRailMissions.srv  SendRailGoal.srv  SendRailMission.srv  SetLampStatus.srv  StartLocalization.srv  setMode.srv
robot_ws/src/ais_safety/: CMakeLists.txt  README.md  package.xml
robot_ws/src/ais_state_machine/: .gitignore  CMakeLists.txt  README.md  package.xml
robot_ws/src/ais_utilities/: .gitignore  CMakeLists.txt  package.xml
robot_ws/src/ais_utilities/include/ais_utilities/: ais_test_node.h  thread_safe_var.h
robot_ws/src/ais_utilities/src/: ais_test_node.cpp
robot_ws/src/amr_localization/: CMakeLists.txt  README.md  package.xml
robot_ws/src/phoenix1_bringup/: README.md
robot_ws/src/phoenix1_parameters/: CMakeLists.txt  package.xml
robot_ws/src/phoenix_diagnostics/: CMakeLists.txt  README.md  package.xml
robot_ws/src/phoenix_diagnostics/launch/: phoenix_diagnostics.launch
robot_ws/src/phoenix_diagnostics/params/: diagnostics_params.yaml
robot_ws/src/phoenix_diagnostics/scripts/: phoenix_diagnostics.py  phoenix_diagnostics_node.py
robot_ws/src/phoenix_diagnostics/scripts/diagnostic_updater/: _diagnostic_status_wrapper.py  _diagnostic_updater.py  _publisher.py  _update_functions.py
robot_ws/src/phoenix_navigation/: .gitignore  CMakeLists.txt  package.xml
robot_ws/src/phoenix_navigation/config/: costmap_common.yaml  costmap_common_localization.yaml  costmap_global_laser.yaml  costmap_global_laser_localization.yaml  costmap_local.yaml  costmap_local_localization.yaml  pose_follower.yaml  teb_planner.yaml
robot_ws/src/phoenix_navigation/launch/: move_base.launch  rail_navigation.launch
robot_ws/src/phoenix_navigation/maps/sim_map/: sim_map.pgm  sim_map.yaml
robot_ws/src/phoenix_navigation/scripts/: rail_navigation.py
robot_ws/src/phoenix_visualization/encoder_simulator/: CMakeLists.txt  package.xml
robot_ws/src/phoenix_visualization/encoder_simulator/config/: stations.yaml  stations_eastlake.yaml  stations_vanbelle.yaml
robot_ws/src/phoenix_visualization/encoder_simulator/include/: encoder_simulator_node.h
robot_ws/src/phoenix_visualization/encoder_simulator/launch/: encoder_simulator.launch
robot_ws/src/phoenix_visualization/encoder_simulator/src/: encoder_simulator_node.cpp  encoder_simulator_node_callback.cpp
robot_ws/src/phoenix_visualization/phoenix_gazebo_camera_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
robot_ws/src/phoenix_visualization/phoenix_gazebo_camera_description/urdf/: CP_fisheye_rgbd_camera.xacro  CP_rgbd_camera.xacro
simulation_ws/src/ais_embedded_simulator/amr_embedded_simulator/: CMakeLists.txt  Readme.md  package.xml
simulation_ws/src/ais_embedded_simulator/amr_embedded_simulator/include/amr_embedded_simulator/: embeded_simulator.h
simulation_ws/src/ais_embedded_simulator/amr_embedded_simulator/launch/: embedded_simulator.launch
simulation_ws/src/ais_embedded_simulator/amr_embedded_simulator/param/: amr_embedded_simulator.yaml
simulation_ws/src/ais_embedded_simulator/amr_embedded_simulator/src/: embeded_simulator.cpp
(+179 files in other folders)
