<?xml version="1.0"?>
<package format="2">
  <name>phoenix_gazebo_camera_description</name>
  <version>1.12.0</version>
  <description>The gazebo_gps_description package</description>
  <maintainer email="a.mohiuddin@ai-systems.ca">Abdullah Mohiuddin</maintainer>
  <license>AIS confidential</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
