<?xml version="1.0"?>
<package format="2">
  <name>amr_embedded_simulator</name>
  <version>0.0.0</version>
  <description>The amr embedded simulator</description>
  <maintainer email="a.mohiuddin@ai-systems.ca">Abdullah Mohiuddin</maintainer>
  <license>ais-confidential</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>rqt_tf_tree</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
